--- a/Teraoka/Controllers/OrderSummaryController/OrderSummaryController.xib
+++ b/Teraoka/Controllers/OrderSummaryController/OrderSummaryController.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -55,7 +56,11 @@
                             <rect key="frame" x="0.0" y="458" width="824" height="85"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q3A-vn-yTM">
-                                    <rect key="frame" x="50" y="12" width="344.5" height="73"/>
+                                    <rect key="frame" x="50" y="12" width="347.5" height="70"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="70" id="HE5-cU-HPy"/>
+                                        <constraint firstAttribute="width" secondItem="Q3A-vn-yTM" secondAttribute="height" multiplier="720:145" id="TGb-1q-pzw"/>
+                                    </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                     <state key="normal" backgroundImage="back_btn"/>
                                     <connections>
@@ -63,13 +68,17 @@
                                     </connections>
                                 </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BACK" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="86B-SF-1nT">
-                                    <rect key="frame" x="208.5" y="36" width="59" height="26"/>
+                                    <rect key="frame" x="209.5" y="34.5" width="59" height="26"/>
                                     <fontDescription key="fontDescription" name="SFUIDisplay-Bold" family="SF UI Display" pointSize="22"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z31-mz-uDT">
-                                    <rect key="frame" x="429.5" y="12" width="344.5" height="73"/>
+                                    <rect key="frame" x="426.5" y="12" width="347.5" height="70"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="70" id="8Ve-Ro-KYg"/>
+                                        <constraint firstAttribute="width" secondItem="Z31-mz-uDT" secondAttribute="height" multiplier="720:145" id="SAk-3I-dQC"/>
+                                    </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                     <state key="normal" backgroundImage="ok_btn"/>
                                     <connections>
@@ -77,7 +86,7 @@
                                     </connections>
                                 </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SUBMIT ORDER" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kPd-Ja-xN1">
-                                    <rect key="frame" x="507.5" y="36" width="159.5" height="26"/>
+                                    <rect key="frame" x="506" y="34.5" width="159.5" height="26"/>
                                     <fontDescription key="fontDescription" name="SFUIDisplay-Bold" family="SF UI Display" pointSize="22"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
@@ -88,14 +97,10 @@
                                 <constraint firstItem="Q3A-vn-yTM" firstAttribute="leading" secondItem="FWU-P5-AN5" secondAttribute="leading" constant="50" id="5nv-aH-Tzc"/>
                                 <constraint firstItem="Z31-mz-uDT" firstAttribute="top" secondItem="FWU-P5-AN5" secondAttribute="top" constant="12" id="81C-Cv-9OU"/>
                                 <constraint firstAttribute="height" constant="85" id="8pd-f4-ZUr"/>
-                                <constraint firstAttribute="bottom" secondItem="Z31-mz-uDT" secondAttribute="bottom" id="IKM-Gi-AJh"/>
                                 <constraint firstAttribute="trailing" secondItem="Z31-mz-uDT" secondAttribute="trailing" constant="50" id="RuJ-Wl-ass"/>
-                                <constraint firstAttribute="bottom" secondItem="Q3A-vn-yTM" secondAttribute="bottom" id="YVB-qk-2lk"/>
                                 <constraint firstItem="kPd-Ja-xN1" firstAttribute="centerY" secondItem="Z31-mz-uDT" secondAttribute="centerY" id="hnK-SO-fmx"/>
                                 <constraint firstItem="86B-SF-1nT" firstAttribute="centerY" secondItem="Q3A-vn-yTM" secondAttribute="centerY" id="j6s-0K-gL7"/>
                                 <constraint firstItem="86B-SF-1nT" firstAttribute="centerX" secondItem="Q3A-vn-yTM" secondAttribute="centerX" constant="15" id="nb1-AI-kn6"/>
-                                <constraint firstItem="Q3A-vn-yTM" firstAttribute="width" secondItem="Z31-mz-uDT" secondAttribute="width" id="pRa-Jz-pRz"/>
-                                <constraint firstItem="Z31-mz-uDT" firstAttribute="leading" secondItem="Q3A-vn-yTM" secondAttribute="trailing" constant="35" id="pz2-3Z-pLu"/>
                                 <constraint firstItem="Q3A-vn-yTM" firstAttribute="top" secondItem="FWU-P5-AN5" secondAttribute="top" constant="12" id="sgj-3I-G5a"/>
                                 <constraint firstItem="kPd-Ja-xN1" firstAttribute="centerX" secondItem="Z31-mz-uDT" secondAttribute="centerX" constant="-15" id="ydK-tA-nhn"/>
                             </constraints>
