--- a/Teraoka/Views/Cell/ExistingOrderCell/ExistingOrderCell.xib
+++ b/Teraoka/Views/Cell/ExistingOrderCell/ExistingOrderCell.xib
@@ -1,118 +1,115 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="SF-UI-Display-Bold.otf">
+            <string>SFUIDisplay-Bold</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExistingOrderCellID" rowHeight="95" id="KGk-i7-Jjw" customClass="ExistingOrderCell">
-            <rect key="frame" x="0.0" y="0.0" width="441" height="95"/>
+            <rect key="frame" x="0.0" y="0.0" width="703" height="95"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="441" height="94.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="703" height="94.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gato.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="S5r-CT-lNH">
-                        <rect key="frame" x="10" y="10" width="74.5" height="74.5"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="S5r-CT-lNH" secondAttribute="height" multiplier="1:1" id="2Ln-pJ-sr9"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Te4-gx-Q1t">
-                        <rect key="frame" x="94" y="10" width="96.5" height="74.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yRv-Ie-65t">
-                        <rect key="frame" x="201" y="10" width="50" height="74.5"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X6N-fy-QUf">
+                        <rect key="frame" x="0.0" y="0.0" width="703" height="94.5"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FTA-fF-cYN">
-                                <rect key="frame" x="0.0" y="22.5" width="11.5" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <nil key="textColor"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no_product_image" translatesAutoresizingMaskIntoConstraints="NO" id="5yx-44-QlZ">
+                                <rect key="frame" x="0.0" y="0.0" width="150" height="94.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="oxj-VK-nnr"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XwX-19-Ef1">
+                                <rect key="frame" x="150" y="0.0" width="103" height="94.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xel-8c-8el">
+                                        <rect key="frame" x="0.0" y="10" width="103" height="84.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="xel-8c-8el" secondAttribute="bottom" id="9QM-gP-W9e"/>
+                                    <constraint firstItem="xel-8c-8el" firstAttribute="top" secondItem="XwX-19-Ef1" secondAttribute="top" constant="10" id="HcT-d8-Mle"/>
+                                    <constraint firstAttribute="trailing" secondItem="xel-8c-8el" secondAttribute="trailing" id="Qxv-v5-Hhr"/>
+                                    <constraint firstItem="xel-8c-8el" firstAttribute="leading" secondItem="XwX-19-Ef1" secondAttribute="leading" id="xh0-JU-eeM"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bzu-U8-1IT">
+                                <rect key="frame" x="253" y="0.0" width="150" height="94.5"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nPy-gM-rWv">
+                                        <rect key="frame" x="30.5" y="25" width="88" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="M88-l4-olH"/>
+                                            <constraint firstAttribute="width" constant="88" id="WyI-iR-STX"/>
+                                        </constraints>
+                                        <color key="textColor" red="0.30588235289999999" green="0.30980392159999998" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="SFUIDisplay-Bold" family="SF UI Display" pointSize="25"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="nPy-gM-rWv" firstAttribute="centerX" secondItem="Bzu-U8-1IT" secondAttribute="centerX" id="Q0e-kl-2Q0"/>
+                                    <constraint firstItem="nPy-gM-rWv" firstAttribute="centerY" secondItem="Bzu-U8-1IT" secondAttribute="centerY" id="dTv-Q7-2IB"/>
+                                    <constraint firstAttribute="width" constant="150" id="yca-z0-jSY"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0TU-8I-2MK">
+                                <rect key="frame" x="403" y="0.0" width="150" height="94.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="q7K-Be-PRB"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="SFUIDisplay-Bold" family="SF UI Display" pointSize="25"/>
+                                <color key="textColor" red="0.30588235289999999" green="0.30980392159999998" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DOL-GG-nVg">
+                                <rect key="frame" x="553" y="0.0" width="150" height="94.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="1mG-LF-73e"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="SFUIDisplay-Bold" family="SF UI Display" pointSize="22"/>
+                                <color key="textColor" red="0.2196078431372549" green="0.74509803921568629" blue="0.6470588235294118" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="50" id="DmR-Ts-yIy"/>
-                            <constraint firstItem="FTA-fF-cYN" firstAttribute="leading" secondItem="yRv-Ie-65t" secondAttribute="leading" id="dnY-6d-dIM"/>
-                            <constraint firstItem="FTA-fF-cYN" firstAttribute="centerY" secondItem="yRv-Ie-65t" secondAttribute="centerY" id="mSg-TP-A8c"/>
-                        </constraints>
-                    </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kXo-hh-1VT">
-                        <rect key="frame" x="261" y="10" width="80" height="74.5"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ShG-4C-fx2">
-                                <rect key="frame" x="0.0" y="22.5" width="61" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="ShG-4C-fx2" firstAttribute="centerY" secondItem="kXo-hh-1VT" secondAttribute="centerY" id="72V-5t-UTF"/>
-                            <constraint firstAttribute="width" constant="80" id="9tX-OF-zja"/>
-                            <constraint firstItem="ShG-4C-fx2" firstAttribute="leading" secondItem="kXo-hh-1VT" secondAttribute="leading" id="PbN-XK-p9s"/>
-                        </constraints>
-                    </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Aq-Jx-J3J">
-                        <rect key="frame" x="351" y="10" width="80" height="74.5"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="81T-yx-MnU">
-                                <rect key="frame" x="14.5" y="16" width="51" height="42"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <state key="normal" title="Sent">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="81T-yx-MnU" firstAttribute="centerY" secondItem="4Aq-Jx-J3J" secondAttribute="centerY" id="f9G-Tt-aXU"/>
-                            <constraint firstItem="81T-yx-MnU" firstAttribute="centerX" secondItem="4Aq-Jx-J3J" secondAttribute="centerX" id="rCN-ka-v0l"/>
-                            <constraint firstAttribute="width" constant="80" id="sxK-mD-vHL"/>
-                        </constraints>
-                    </view>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="S5r-CT-lNH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="2oq-fV-Jnp"/>
-                    <constraint firstItem="yRv-Ie-65t" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="65Y-3W-bH2"/>
-                    <constraint firstAttribute="trailing" secondItem="4Aq-Jx-J3J" secondAttribute="trailing" constant="10" id="DIB-kQ-nE6"/>
-                    <constraint firstItem="4Aq-Jx-J3J" firstAttribute="leading" secondItem="kXo-hh-1VT" secondAttribute="trailing" constant="10" id="Fpv-mP-3IJ"/>
-                    <constraint firstItem="Te4-gx-Q1t" firstAttribute="leading" secondItem="S5r-CT-lNH" secondAttribute="trailing" constant="10" id="N4V-7E-SVl"/>
-                    <constraint firstAttribute="bottom" secondItem="S5r-CT-lNH" secondAttribute="bottom" constant="10" id="NmJ-z8-OmV"/>
-                    <constraint firstItem="kXo-hh-1VT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Orz-OT-NyM"/>
-                    <constraint firstItem="4Aq-Jx-J3J" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="UE9-iq-qWt"/>
-                    <constraint firstAttribute="bottom" secondItem="Te4-gx-Q1t" secondAttribute="bottom" constant="10" id="bT9-DD-q79"/>
-                    <constraint firstItem="Te4-gx-Q1t" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="hrs-m6-VR7"/>
-                    <constraint firstAttribute="bottom" secondItem="4Aq-Jx-J3J" secondAttribute="bottom" constant="10" id="ieb-Cx-1QL"/>
-                    <constraint firstAttribute="bottom" secondItem="kXo-hh-1VT" secondAttribute="bottom" constant="10" id="igx-De-2Vf"/>
-                    <constraint firstItem="yRv-Ie-65t" firstAttribute="leading" secondItem="Te4-gx-Q1t" secondAttribute="trailing" constant="10" id="nGp-Nz-7u9"/>
-                    <constraint firstAttribute="bottom" secondItem="yRv-Ie-65t" secondAttribute="bottom" constant="10" id="ncP-fc-1yV"/>
-                    <constraint firstItem="kXo-hh-1VT" firstAttribute="leading" secondItem="yRv-Ie-65t" secondAttribute="trailing" constant="10" id="obB-OM-mGB"/>
-                    <constraint firstItem="S5r-CT-lNH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="vR3-5b-nIG"/>
+                    <constraint firstAttribute="bottom" secondItem="X6N-fy-QUf" secondAttribute="bottom" id="D47-6R-g47"/>
+                    <constraint firstItem="X6N-fy-QUf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="OhH-eq-Zir"/>
+                    <constraint firstAttribute="trailing" secondItem="X6N-fy-QUf" secondAttribute="trailing" id="Pea-io-0of"/>
+                    <constraint firstItem="X6N-fy-QUf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="dlW-MX-zSo"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="btnSent" destination="81T-yx-MnU" id="kwW-WU-8yc"/>
-                <outlet property="lbOptions" destination="Te4-gx-Q1t" id="aMx-U6-bwc"/>
-                <outlet property="lbPrice" destination="ShG-4C-fx2" id="LJS-Lk-6tQ"/>
-                <outlet property="lbQty" destination="FTA-fF-cYN" id="EUM-Lu-tgG"/>
-                <outlet property="productImage" destination="S5r-CT-lNH" id="vvS-Or-fy5"/>
+                <outlet property="lbOptions" destination="xel-8c-8el" id="ODq-IN-4hv"/>
+                <outlet property="lbPrice" destination="0TU-8I-2MK" id="H5D-Re-79n"/>
+                <outlet property="lbStatus" destination="DOL-GG-nVg" id="l7Q-qS-F2N"/>
+                <outlet property="productImage" destination="5yx-44-QlZ" id="myN-I2-tdW"/>
+                <outlet property="tfQuantity" destination="nPy-gM-rWv" id="d59-iO-dGj"/>
             </connections>
-            <point key="canvasLocation" x="142.5" y="87.5"/>
+            <point key="canvasLocation" x="273.5" y="87.5"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="gato.jpg" width="200" height="200"/>
+        <image name="no_product_image" width="137" height="137"/>
     </resources>
 </document>
